# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

import("//core/application.gni")

application("net_service") {
  sources = [
    "net_service.cc",
    "net_service.h",
  ]

  deps = [
    "//base",
    "//core/public/application",
    "//net",
    "//net:net_browser_services",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//url",
  ]
}
