# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

source_set("application_host") {
  sources = [
    "application_host_impl.cc",
    "application_host_impl.h",
    "application_registry_impl.cc",
    "application_registry_impl.h",
    "entry_point.cc",
    "entry_point.h",
    "library_application_loader.cc",
    "library_application_loader.h",
  ]

  deps = []

  public_deps = [
    "//base",
    "//core/public/common",
    "//core/public/interfaces",
  ]
}
