# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

source_set("common") {
  visibility = [
    "//core/application",
    "//core/public/common/*",
    "//core/shell",
  ]

  sources = [
    "application_connection_impl.cc",
    "application_connection_impl.h",
    "service_provider_impl.cc",
    "service_provider_impl.h",
  ]

  deps = [
    "//url",
  ]

  public_deps = [
    "//base",
    "//core/public/interfaces",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]
}
