# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

source_set("shell") {
  visibility = [ "//core/public/shell/*" ]

  sources = [
    "shell_impl.cc",
    "shell_impl.h",
  ]

  deps = [
    # TODO(core): Remove this. It's a hack for in-process app hosting.
    "//core/application_host",
    "//core/common",
    "//url",
  ]

  public_deps = [
    "//base",
    "//core/public/application_host",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]
}
