# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("shell") {
  visibility = [ "//core/public/shell/*" ]

  sources = [
    "application_manager.cc",
    "application_manager.h",
    "shell_impl.cc",
    "shell_impl.h",
  ]

  deps = [
    "//core/application_host",
    "//core/common",
    "//core/public/common",
    "//url",
  ]

  public_deps = [
    "//base",
    "//core/public/interfaces",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]
}
