# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//core/core_application.gni")

group("public") {
  deps = [
    ":factory"
  ]
}

source_set("factory") {
  sources = [
    "factory.cc",
    "factory.h",
  ]

  deps = [
    "//applications/proxy_resolver",
  ]

  public_deps = [
    "//core/public/application",
  ]
}

