# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//core/core_application.gni")

source_set("browser") {
  sources = [
    "browser.cc",
    "browser.h",
  ]

  public_deps = [
    "//base",
    "//core/public/application",
    "//core/public/interfaces",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
  ]
}

