# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

import("//core/core_application.gni")

group("init") {
  deps = [ ":chrome_init" ]
}

core_application("chrome_init") {
  sources = [
    "init.cc",
    "init.h",
  ]

  deps = [
    "//base",
    "//url",
  ]
}
