# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("application_host") {
  sources = [
    "chrome_application_registry.cc",
    "chrome_application_registry.h",
  ]

  deps = [
    "//applications/proxy_resolver/public",
    "//chrome/core/common",
  ]

  public_deps = [
    "//base",
    "//core/public/application_host",
    "//url",
  ]
}
