# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("common") {
  sources = [
    "application_urls.cc",
    "application_urls.h",
    "chrome_core_client.cc",
    "chrome_core_client.h",
  ]

  deps = [
    "//chrome/core/application_host",
    "//chrome/core/shell",
  ]

  public_deps = [
    "//base",
    "//core/public/common",
  ]
}
