# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

source_set("shell") {
  sources = [
  ]

  deps = [
    "//applications/net_service",
    "//chrome/applications/init",
    "//core/public/common",
    "//net:net_browser_services",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]

  public_deps = [
    "//base",
    "//core/public/shell",
  ]
}
