# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

source_set("application_host") {
  sources = [
    "application_host.h",
    "application_loader.h",
    "application_registry.h",
    "core_application_host_client.cc",
    "core_application_host_client.h",
  ]

  deps = [
    "//core/application_host",
  ]

  public_deps = [
    "//base",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]

  allow_circular_includes_from = [ "//core/application_host" ]
}
