# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("application_host") {
  sources = [
    "application_loader.h",
    "application_registry.cc",
    "application_registry.h",
    "application_runner.h",
  ]

  deps = [
    "//core/application_host",
    "//core/public/common",
  ]

  public_deps = [
    "//base",
    "//core/public/application",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]

  allow_circular_includes_from = [ "//core/application_host" ]
}
