# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("common") {
  sources = [
    "application_connection.h",
    "application_urls.cc",
    "application_urls.h",
    "core_client.cc",
    "core_client.h",
    "service_provider.h",
  ]

  deps = [
    "//core/common",
  ]

  public_deps = [
    "//base",
    "//third_party/mojo/src/mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/public/cpp/system",
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]

  allow_circular_includes_from = [ "//core/common" ]
}
