# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(enable_chrome_core)

import("//third_party/mojo/src/mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "application_host_service.mojom",
  ]

  public_deps = [
    "//third_party/mojo/src/mojo/public/interfaces/application",
  ]
}
