# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("shell") {
  sources = [
    "core_shell_client.cc",
    "core_shell_client.h",
    "shell.h"
  ]

  deps = [
    "//core/shell",
  ]

  public_deps = [
    "//base",
    "//third_party/mojo/src/mojo/public/interfaces/application",
    "//url",
  ]

  allow_circular_includes_from = [ "//core/shell" ]
}
